<resources>
    <string name="app_name">安心央厨</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="loacation">腾讯大厦(科技北五道)</string>
    <string name="take_time_text">约35分钟到达</string>
    <string name="search">      搜索</string>
    <string name="view_kitchen">可视厨房</string>
    <string name="this_location">当前定位地址</string>
    <string name="re_location">重新定位</string>
    <string name="send_location">送餐地址</string>
    <string name="delete">删除</string>
    <string name="add_location">新增送餐地址</string>
    <string name="completed">完成</string>
    <string name="name">姓  名</string>
    <string name="tel">电  话</string>
    <string name="invate_friend">邀请好友加入</string>
    <string name="wechat_friend">微信好友</string>
    <string name="qq_friend">QQ好友</string>
    <string name="webo_friend">朋友圈</string>
    <string name="cancel">取消</string>
    <string name="open_right">立即开启</string>
    <string name="request_location">位置服务未开启</string>
    <string name="ordering_rule">预约点餐规则</string>
    <string name="ordering_rule_info">1.每餐起订量为10份\n2.预约时间为隔天预约</string>
    <string name="location_setting">请进入系统[设置]-[应用程序]-[安心央厨]-[权限]-位置信息开关，并允许安心央厨使用定位服务</string>
    <string-array name="contact_array">
        <item>$^*张狗蛋</item>
        <item>000王二</item>
        <item>张三</item>
        <!--<item>❤迷</item>-->
        <item>boy</item>
        <item>马蜂窝</item>
        <item>王了了</item>
        <item>李玖折</item>
        <item>胡三</item>
        <item>张政民</item>
        <item>陈九</item>
        <item>白玉芬</item>
        <item>仓春莲</item>
        <item>仓红</item>
        <item>陈超云</item>
        <item>陈高</item>
        <item>陈国祥</item>
        <item>陈小荣</item>
        <item>陈秀芬</item>
        <item>陈艳华</item>
        <item>陈兆国</item>
        <item>成秀山</item>
        <item>仇腊梅</item>
        <item>戴金辉</item>
        <item>邓海燕</item>
        <item>翟蕾</item>
        <item>丁德明</item>
        <item>丁素琴</item>
        <item>董荣柱</item>
        <item>范惠</item>
        <item>冯霞</item>
        <item>伏严成</item>
        <item>皋德华</item>
        <item>皋歌</item>
        <item>高艳</item>
        <item>顾其兰</item>
        <item>管小云</item>
        <item>何佳丽</item>
        <item>侯志玲</item>
        <item>黄慧</item>
        <item>黄伟</item>
        <item>惠志刚</item>
        <item>季赛花</item>
        <item>季铜然</item>
        <item>纪海燕</item>
        <item>蒋雯</item>
        <item>康海霞</item>
        <item>乐峰</item>
        <item>李金凤</item>
        <item>李军</item>
        <item>李晓慧</item>
        <item>刘琳</item>
        <item>马丽</item>
        <item>孟亚军</item>
        <item>明汉琴</item>
        <item>倪燕</item>
        <item>潘杰</item>
        <item>钱萍</item>
        <item>邱文干</item>
        <item>沈亚杰</item>
        <item>盛静</item>
        <item>施伟</item>
        <item>施志胜</item>
        <item>石磊</item>
        <item>时扬</item>
        <item>束长元</item>
        <item>宋欣</item>
        <item>孙新东</item>
        <item>孙正兰</item>
        <item>汤丽丽</item>
        <item>唐新胜</item>
        <item>陶椿燕</item>
        <item>陶晓雷</item>
        <item>王丹</item>
        <item>王霞</item>
        <item>王晓雷</item>
        <item>王雪梅</item>
        <item>吴长凤</item>
        <item>吴凤祥</item>
        <item>吴红兵</item>
        <item>吴华强</item>
        <item>吴萍</item>
        <item>夏祥</item>
        <item>肖丽丽</item>
        <item>谢莉萍</item>
        <item>谢艳</item>
        <item>徐海莲</item>
        <item>徐进</item>
        <item>徐丽云</item>
        <item>徐萍</item>
        <item>刘世佳</item>
    </string-array>

    <string-array name="mobile_array">
        <item>18019913883</item>
        <item>10086</item>
        <item>12306</item>
        <!--<item>18019913333</item>-->
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
    </string-array>
    <string name="title_activity_wxentry">WXEntryActivity</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <item type="id" name="position"></item>


</resources>
