<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="307dp"
    android:layout_height="193dp"
    android:orientation="vertical"
    android:background="@drawable/request_location_bg_bg"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:textSize="@dimen/title_text_size"
    android:textColor="@color/black"
    android:gravity="center"
    android:layout_marginTop="@dimen/title_text_size"
    android:text="@string/request_location"
    />
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:textSize="@dimen/mid_text_size"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/location_setting"
        />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/item_divider"
            />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height">
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/shallow_black"
            android:textSize="@dimen/title_text_size"
            android:text="@string/cancel"
            />
        <TextView
            android:id="@+id/open_right_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/open_color"
            android:textSize="@dimen/title_text_size"
            android:text="@string/open_right"
            />
    </LinearLayout>
</LinearLayout>