<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.anxin.kitchen.activity.InvateFriendActivity">
    <include layout="@layout/title_bar"
        android:id="@+id/top_layout"
        />

    <ImageView
        android:id="@+id/bg_"
        android:layout_below="@id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/invate_bg"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="37.3dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/top_layout"
        android:layout_width="346.7dp"
        android:layout_height="604.7dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invate_friend"
            android:textSize="@dimen/invate_big_text_size"
            android:textColor="@color/invate_color"
            />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="撸啊撸点餐团"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/invate_color"
            />
        <LinearLayout
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/share_wechat_ll"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/wechat_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/shallow_black"
                    android:text="@string/wechat_friend"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_friend_group_ll"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/weibo_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/shallow_black"
                    android:text="@string/webo_friend"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/share_qq_ll"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/qq_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/shallow_black"
                    android:text="@string/qq_friend"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:src="@drawable/erwei_code"
                android:layout_marginBottom="67.3dp"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
